docs(release.md): 添加了如何上架App Store的应用程序的新版教程

--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
     },
     "dependencies": {
         "jslint": "^0.12.0"
+    },
+    "devDependencies": {
+        "cz-conventional-changelog": "^3.0.2"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
